--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@strv/react-scripts": "^0.1.0",
     "babel-plugin-styled-components": "^1.1.0",
+    "firebase": "^5.0.2",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "recompose": "^0.27.0",
     "styled-components": "^3.0.0"
   },
   "devDependencies": {
