--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,12 @@
     "@strv/javascript/environments/react/v16",
     "prettier",
     "prettier/react"
-  ]
+  ],
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src"]
+      }
+    }
+  }
 }
