--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,12 @@
 {
   "hosting": {
     "public": "build",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      {
+        "source": "**/!(*.css|*.js|*.map|*.jpg|*.gif|*.png|*.php)",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
